[gd_scene load_steps=3 format=3 uid="uid://bd2ym0b2i014k"]

[ext_resource type="Script" uid="uid://bthxsrn2bf4nd" path="res://NPC.gd" id="1_xxcha"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ei2s5"]
radius = 690.321

[node name="NPC" type="Node2D"]
script = ExtResource("1_xxcha")

[node name="npcSprite" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="npcSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcSprite/Area2D"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_ei2s5")

[node name="groundPos" type="Node2D" parent="npcSprite"]

[connection signal="body_entered" from="npcSprite/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="npcSprite/Area2D" to="." method="_on_area_2d_body_exited"]
